--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AbdelhafzDev</title>
+    <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-</head>
-<body>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  </head>
+  <body>
     <header>
-        <nav>
-           
-        </nav>
+      <nav>
+       <ul>
+         <li>Home</li>
+         <li>about</li>
+         <li>profile</li>
+         <li>contact</li>
+       </ul>
+      </nav>
     </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
-   
-
+    <main></main>
+    <footer></footer>
 
     <script defer src="js/app.js"></script>
-</body>
+  </body>
 </html>
