--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,15 @@
   <body>
     <header>
       <nav>
-       <ul>
-         <li>Home</li>
-         <li>about</li>
-         <li>profile</li>
-         <li>contact</li>
-       </ul>
+        
       </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 
     <script defer src="js/app.js"></script>
   </body>
